# IMAS-Streams

./: README.md  pyproject.toml
.github/workflows/: test.yml
src/imas_streams/: __init__.py  __main__.py  abc.py  cli.py  consumer.py  consumer_util.py  ids_consumers.py  imas_utils.py  kafka.py  metadata.py  muscle3_datasource.py  producer.py  protocols.py  xarray_consumers.py
tests/: test_cli.py  test_ids_consumer.py  test_ids_producer.py  test_ids_stream.py  test_kafka.py  test_metadata.py  test_muscle3.py  test_xarray_consumer.py
